--- a/CNN_Melonona_Assignment.ipynb
+++ b/CNN_Melonona_Assignment.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1VciGN9CYgWy-j-7ewI5vIWnFMH_HE2Jc",
-      "authorship_tag": "ABX9TyNHT8wZZG4QeIXrjFIQn4L8",
+      "authorship_tag": "ABX9TyPRrRC88w+alTb88nwWuz63",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -867,7 +867,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Visulaise the Augumented Data"
+        "Visualize the Augumented Data"
       ],
       "metadata": {
         "id": "Gj3ftos-Ldp4"
